--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Hanuka Light - Добавь света в мир" />
     
-    <!-- Google Fonts: Cinzel, Great Vibes, Inter -->
+    <!-- Google Fonts: Display (Cinzel, Playfair Display, PT Serif), Script (Great Vibes), UI (Inter, Roboto, PT Sans) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Great+Vibes&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=PT+Serif:wght@400;700&family=Great+Vibes&family=Inter:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&family=PT+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
     
     <title>Hanuka Light</title>
   </head>
